# box-office-tracking

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  LICENSE  README.md  SCHEMA.md  app.py  backfill.py  create_release.sh  deploy_modal.sh  etl.py  main.py  pyproject.toml  requirements.txt  sync_and_update.py  uv_migration_scope.md
.claude/: CLAUDE.md
.github/workflows/: deploy-on-merge.yml  deploy.yml
.githuub/workflows/: deploy.yml
analytics/: query_duckdb.py
assets/: 0_csv_inputs.sql  1_base_query.sql  2_scoreboard.sql  3_worst_picks.sql  __init__.py  base_query.sql  box_office_draft.csv  manual_adds.csv  released_movies.sql  released_movies_format.json  scoreboard.sql  scoreboard_format.json  worst_picks_format.json
assets/drafts/2024/: box_office_draft.csv  manual_adds.csv  movie_better_pick_exclusions.csv  movie_multiplier_overrides.csv  round_multiplier_overrides.csv
assets/drafts/2025/: box_office_draft.csv  manual_adds.csv  movie_multiplier_overrides.csv  round_multiplier_overrides.csv
boxofficemojo_etl/: etl.py
dashboard_etl/: extract.py  load.py  transform.py
data/: box_office_draft.csv
etl/: extract.py  load.py  transform.py
etl_process/: extract.py  load.py  transform.py
src/: __init__.py  etl.py
src/assets/: 2_scoreboard.sql  released_movies_format.json  scoreboard_format.json
src/assets/drafts/me_and_noah_2025/: box_office_draft.csv
src/boxofficemojo_etl/: etl.py
src/dashboard_etl/: extract.py  load.py  transform.py
src/dashboard_etl/sqlmesh_project/: config.py
src/dashboard_etl/sqlmesh_project/models/: base_query.sql  base_query_int.sql  better_pick_final.sql  better_pick_int.sql  drafter.sql  scoreboard.sql  worst_picks.sql
src/dashboard_etl/sqlmesh_project/models/_1_raw/: box_office_mojo_dump.py  box_office_mojo_dump.sql  drafter.py  drafter.sql  manual_adds.py  manual_adds.sql  movie_multiplier_overrides.sql  multipliers_and_exclusions.py  multipliers_and_exclusions.sql
src/dashboard_etl/sqlmesh_project/models/_2_cleaned/: box_office_mojo_dump.sql  draft_year_exclusions.sql  drafter.sql  manual_adds.sql  movie_multiplier_overrides.sql  round_multiplier_overrides.sql
src/dashboard_etl/sqlmesh_project/utils/: gspread_utils.py
src/etl/: __init__.py
src/etl/extract/: __init__.py  main.py  runner.py
src/etl/extract/tables/: release_domestic.py  release_id_lookup.py  release_metadata.py  release_worldwide_snapshot.py  worldwide_box_office.py  worldwide_snapshot.py
src/etl/load/: __init__.py  main.py
src/etl/transform/: __init__.py  main.py
src/sqlmesh_project/: config.py
src/sqlmesh_project/models/_1_raw/: release_domestic.sql  release_id_lookup.sql  release_metadata.sql  release_worldwide_snapshot.sql  worldwide_box_office.sql  worldwide_snapshot.sql
src/sqlmesh_project/models/_2_cleaned/: release_metadata.sql  release_worldwide_snapshot.sql  worldwide_box_office.sql  worldwide_snapshot.sql
src/sqlmesh_project/models/_4_published/: worldwide_box_office.sql
src/utils/: check_config_files.py  config.py  db_connection.py  format.py  gspread_format.py  query.py  read_config.py  s3_utils.py  scraping.py
utils/: check_config_files.py  db_connection.py  format.py  gspread_format.py  logging_config.py  query.py  read_config.py
(+6 files in other folders)
