[project]
name = "box-office-tracking"
version = "0.1.0"
description = "Tracking a box office draft with data from Box Office Mojo."
authors = [{ name = "Ethan Fuerst" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
dependencies = [
    "gspread>=5.12.4,<6",
    "pandas>=2.2.0,<3",
    "gspread-formatting>=1.1.2,<2",
    "duckdb>=1.1.3,<2",
    "modal>=1.0.0,<2",
    "python-dotenv>=1.0.1,<2",
    "sqlfluff>=3.3.0,<4",
    "lxml>=5.3.0,<6",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.sqlfluff]
dialect = "duckdb"
max_line_length = 80
indent_unit = "tab"
tab_space_size = 4
capitalization_policy = "lower"
extended_capitalisation_policy = "lower"
preferred_type_casting_style = "shorthand"
exclude_rules = "LT05, LT09, ST05"

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules.layout.long_lines]
max_line_length = 80

[tool.sqlfluff.rules.layout.select_targets]
line_position = "leading"

[tool.sqlfluff.rules.structure.subquery]
forbid_subquery_in = "both"
