[project]
name = "box-office-tracking"
version = "0.2.0"
description = "Tracking box office data."
authors = [{ name = "Ethan Fuerst" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "gspread>=5.12.4,<6",
    "pandas>=2.2.0,<3",
    "gspread-formatting>=1.1.2,<2",
    "duckdb>=1.1.3,<2",
    "modal>=1.0.0,<2",
    "python-dotenv>=1.0.1,<2",
    "sqlfluff>=3.3.0,<4",
    "lxml>=5.3.0,<6",
    "sqlmesh>=0.221.1",
    "isort>=6.0.1",
    "s3fs>=2024.0.0",
    "pyarrow>=14.0.0",
    "beautifulsoup4>=4.12.0,<5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
